implemented the util, created the remove student method and fixed some problems with the department class